--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -38,8 +38,9 @@ http {
         location /static/ {
             root /;
         }
-{% if PROXY_DJANGO %}       
-        location / {
+
+{% if PROXY %}       
+        location {{ PROXY_LOCATION }} {
             proxy_pass_header Server;
             proxy_set_header Host $http_host;
             proxy_redirect off;
@@ -47,9 +48,10 @@ http {
             proxy_set_header X-Scheme $scheme;
             proxy_connect_timeout 10;
             proxy_read_timeout 10;
-            proxy_pass {{ PROXY_DJANGO_PASS }};
+            proxy_pass {{ PROXY_PASS }};
         }
 {% endif %}
+
         error_page 404 /404.html;
             location = /static/40x.html {
         }
