--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -34,6 +34,9 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
+        location /static/ {
+            root /;
+        }
 
 {% if PROXY %}       
         location {{ PROXY_LOCATION }} {
