--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -51,12 +51,7 @@ http {
         }
 {% endif %}
 
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
+        error_page 404             /40x.html;
         error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
     }
 }
